use the right selector instead of a new one and correct em-based spacing by recalculating values using the site’s 14px base font-size instead of 16px.
Correct em-based spacing by recalculating values using the site’s 14px base font-size instead of 16px

Correct em-based spacing by recalculating values using the site’s 14px base font-size instead of 16px.

--- a/assets/src/scss/layout/footer.scss
+++ b/assets/src/scss/layout/footer.scss
@@ -217,6 +217,7 @@
   li {
     font-size: fix-font-size-hack(0.875em);
     list-style-type: none;
+    margin-top: 0.357em;
   }
 
   a {
@@ -229,12 +230,6 @@
 .footer-navigation-group {
   & + .footer-navigation-group {
     margin-top: fix-font-size-hack(2em);
-  }
-
-  .menu {
-    li {
-      margin-top: 0.3125em;
-    }
   }
 }
 
